--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Premium digital templates for websites, resumes, presentations, and more. Elevate your projects with our professionally crafted themes." />
   <title>Digital Templates Store</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
@@ -25,6 +28,7 @@
       <button class="nav-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="primary-navigation" type="button">
         <span class="hamburger"></span>
       </button>
+      <div class="nav-overlay" tabindex="-1" aria-hidden="true"></div>
     </div>
   </header>
 
@@ -36,6 +40,9 @@
       <a href="#templates" class="btn btn-primary hero-cta" type="button">Browse Templates</a>
     </div>
   </section>
+
+  <!-- Elegant Container Section -->
+  <!-- Removed elegant container section as per user request -->
 
   <!-- Template Showcase -->
   <section id="templates" class="templates-section">
