--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="templates/Asset/logo.png" />
+  <link rel="shortcut icon" type="image/x-icon" href="templates/Asset/logo.png" />
+  <link rel="apple-touch-icon" type="image/png" href="templates/Asset/logo.png" />
   <script defer src="script.js"></script>
 </head>
 <body>
